--- a/App.config
+++ b/App.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="WindowsFormsApplication1.Properties.Settings.dataBaseConnectString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;E:\Homework C++\Week 8\Pc2\WindowsFormsApplication1\myData.mdf&quot;;Integrated Security=True;Connect Timeout=30"
+            providerName="System.Data.SqlClient" />
+        <add name="WindowsFormsApplication1.Properties.Settings.ScoresConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Scores.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
